--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Sổ tay ĐTHS</title>
+  <title>Tìm kiếm nhanh trong BLTTHS 2021</title>
   <style>
     body {{
       font-family: Arial, sans-serif;
