--- a/index.html
+++ b/index.html
@@ -5,60 +5,97 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Tìm kiếm nhanh trong BLTTHS 2021</title>
-  <style>
-    body {{
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 20px;
-      background: #f2f2f2;
-    }}
-    h1 {{
-      font-size: 24px;
-      margin-bottom: 10px;
-      text-align: center;
-    }}
-    input {{
-      width: 100%;
+  
+<style>
+  body {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
+    background-color: #f9f9f9;
+    margin: 0;
+    padding: 0;
+    color: #333;
+  }
+
+  .container {
+    max-width: 460px;
+    margin: 0 auto;
+    padding: 20px;
+  }
+
+  h1 {
+    font-size: 24px;
+    text-align: center;
+    margin-bottom: 20px;
+    font-weight: 600;
+    color: #111;
+  }
+
+  form {
+    background: #fff;
+    padding: 16px;
+    border-radius: 16px;
+    box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+  }
+
+  label {
+    display: block;
+    margin-bottom: 6px;
+    font-size: 14px;
+    font-weight: 500;
+  }
+
+  input[type="text"],
+  select {
+    width: 100%;
+    padding: 12px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 12px;
+    margin-bottom: 16px;
+    box-sizing: border-box;
+  }
+
+  button {
+    width: 100%;
+    padding: 14px;
+    font-size: 16px;
+    background-color: #007aff;
+    color: white;
+    border: none;
+    border-radius: 14px;
+    font-weight: 600;
+    cursor: pointer;
+    transition: background-color 0.2s ease;
+  }
+
+  button:hover {
+    background-color: #005ecb;
+  }
+
+  .result {
+    margin-top: 20px;
+    padding: 16px;
+    background-color: #fff;
+    border-radius: 16px;
+    box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+    line-height: 1.6;
+    font-size: 15px;
+  }
+
+  @media (max-width: 480px) {
+    .container {
       padding: 12px;
-      margin-bottom: 10px;
-      font-size: 16px;
-      box-sizing: border-box;
-      border-radius: 5px;
-      border: 1px solid #ccc;
-    }}
-    button {{
-      width: 100%;
-      padding: 12px;
-      font-size: 16px;
-      background: #007bff;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-    }}
-    button:hover {{
-      background: #0056b3;
-    }}
-    #result {{
-      margin-top: 20px;
-      background: white;
-      padding: 15px;
-      border-radius: 8px;
-      box-shadow: 0 0 5px #ccc;
-    }}
-    .article {{
-      margin-bottom: 20px;
-    }}
-    .article h3 {{
-      margin-bottom: 5px;
-      color: #007bff;
-    }}
-    @media (min-width: 600px) {{
-      h1 {{
-        font-size: 28px;
-      }}
-    }}
-  </style>
+    }
+
+    h1 {
+      font-size: 20px;
+    }
+
+    button {
+      font-size: 15px;
+    }
+  }
+</style>
+
 </head>
 <body>
 
