--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Tìm kiếm nhanh trong BLTTHS 2021</title>
+  <title>Tra cứu những văn bản có liên quan đến điều luật của Bộ luật Tố tụng hình sự</title>
   
 <style>
   body {
