--- a/index.html
+++ b/index.html
@@ -96,6 +96,15 @@
   }
 </style>
 
+
+<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-database-compat.js"></script>
+<script>
+  const firebaseConfig = {'apiKey': 'AIzaSyDLhE3IdVAOP4PkPErMK8GWKXV_7Sl0vGw', 'authDomain': 'ghichublhs.firebaseapp.com', 'databaseURL': 'https://ghichublhs-default-rtdb.firebaseio.com', 'projectId': 'ghichublhs', 'storageBucket': 'ghichublhs.appspot.com', 'messagingSenderId': '847673954472', 'appId': '1:847673954472:web:8c5836e84156f6241cb29d', 'measurementId': 'G-DH10LBJDDX'};
+  firebase.initializeApp(firebaseConfig);
+  const db = firebase.database();
+</script>
+
 </head>
 <body>
 
