--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 </head>
 <body>
 
-  <h1>Sổ tay ĐTHS</h1>
+  <h1>Bộ luật Hình sự 2015 sửa đổi 2021</h1>
   <input type="text" id="searchInput" placeholder="Nhập Điều xxx hoặc từ khóa bất kỳ...">
   <button onclick="searchLaw()">Tìm kiếm</button>
   <div id="result"></div>
