--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Tra cứu những văn bản có liên quan đến điều luật của Bộ luật Tố tụng hình sự</title>
+  <title>Tìm kiếm Bộ luật Tố tụng hình sự</title>
   
 <style>
   body {
@@ -47,7 +47,7 @@
   select {
     width: 100%;
     padding: 12px;
-    font-size: 16px;
+    font-size: 24px;
     border: 1px solid #ccc;
     border-radius: 12px;
     margin-bottom: 16px;
@@ -57,7 +57,7 @@
   button {
     width: 100%;
     padding: 14px;
-    font-size: 16px;
+    font-size: 24px;
     background-color: #007aff;
     color: white;
     border: none;
